Programa5/y.output
   0  $accept : programa $end

   1  $$1 :

   2  programa : $$1 declaraciones funciones

   3  $$2 :

   4  $$3 :

   5  declaraciones : tipo $$2 lista_var PYC $$3 declaraciones

   6  $$4 :

   7  $$5 :

   8  declaraciones : tipo_registro $$4 lista_var PYC $$5 declaraciones
   9                |

  10  $$6 :

  11  tipo_registro : ESTRUCT INICIO $$6 declaraciones END

  12  $$7 :

  13  tipo : base $$7 tipo_arreglo

  14  base : ENTERO
  15       | REAL
  16       | DREAL
  17       | CAR
  18       | SIN

  19  $$8 :

  20  tipo_arreglo : LCOR NUM $$8 RCOR tipo_arreglo
  21               |

  22  $$9 :

  23  lista_var : ID $$9 lista_var2

  24  $$10 :

  25  lista_var2 : COMA ID $$10 lista_var2
  26             |

  27  funciones :

state 0
	$accept : . programa $end  (0)
	$$1 : .  (1)

	.  reduce 1

	programa  goto 1
	$$1  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : $$1 . declaraciones funciones  (2)
	declaraciones : .  (9)

	ESTRUCT  shift 3
	ENTERO  shift 4
	REAL  shift 5
	DREAL  shift 6
	SIN  shift 7
	CAR  shift 8
	$end  reduce 9

	tipo  goto 9
	base  goto 10
	tipo_registro  goto 11
	declaraciones  goto 12


state 3
	tipo_registro : ESTRUCT . INICIO $$6 declaraciones END  (11)

	INICIO  shift 13
	.  error


state 4
	base : ENTERO .  (14)

	.  reduce 14


state 5
	base : REAL .  (15)

	.  reduce 15


state 6
	base : DREAL .  (16)

	.  reduce 16


state 7
	base : SIN .  (18)

	.  reduce 18


state 8
	base : CAR .  (17)

	.  reduce 17


state 9
	declaraciones : tipo . $$2 lista_var PYC $$3 declaraciones  (5)
	$$2 : .  (3)

	.  reduce 3

	$$2  goto 14


state 10
	tipo : base . $$7 tipo_arreglo  (13)
	$$7 : .  (12)

	.  reduce 12

	$$7  goto 15


state 11
	declaraciones : tipo_registro . $$4 lista_var PYC $$5 declaraciones  (8)
	$$4 : .  (6)

	.  reduce 6

	$$4  goto 16


state 12
	programa : $$1 declaraciones . funciones  (2)
	funciones : .  (27)

	.  reduce 27

	funciones  goto 17


state 13
	tipo_registro : ESTRUCT INICIO . $$6 declaraciones END  (11)
	$$6 : .  (10)

	.  reduce 10

	$$6  goto 18


state 14
	declaraciones : tipo $$2 . lista_var PYC $$3 declaraciones  (5)

	ID  shift 19
	.  error

	lista_var  goto 20


state 15
	tipo : base $$7 . tipo_arreglo  (13)
	tipo_arreglo : .  (21)

	LCOR  shift 21
	ID  reduce 21

	tipo_arreglo  goto 22


state 16
	declaraciones : tipo_registro $$4 . lista_var PYC $$5 declaraciones  (8)

	ID  shift 19
	.  error

	lista_var  goto 23


state 17
	programa : $$1 declaraciones funciones .  (2)

	.  reduce 2


state 18
	tipo_registro : ESTRUCT INICIO $$6 . declaraciones END  (11)
	declaraciones : .  (9)

	ESTRUCT  shift 3
	ENTERO  shift 4
	REAL  shift 5
	DREAL  shift 6
	SIN  shift 7
	CAR  shift 8
	END  reduce 9

	tipo  goto 9
	base  goto 10
	tipo_registro  goto 11
	declaraciones  goto 24


state 19
	lista_var : ID . $$9 lista_var2  (23)
	$$9 : .  (22)

	.  reduce 22

	$$9  goto 25


state 20
	declaraciones : tipo $$2 lista_var . PYC $$3 declaraciones  (5)

	PYC  shift 26
	.  error


state 21
	tipo_arreglo : LCOR . NUM $$8 RCOR tipo_arreglo  (20)

	NUM  shift 27
	.  error


state 22
	tipo : base $$7 tipo_arreglo .  (13)

	.  reduce 13


state 23
	declaraciones : tipo_registro $$4 lista_var . PYC $$5 declaraciones  (8)

	PYC  shift 28
	.  error


state 24
	tipo_registro : ESTRUCT INICIO $$6 declaraciones . END  (11)

	END  shift 29
	.  error


state 25
	lista_var : ID $$9 . lista_var2  (23)
	lista_var2 : .  (26)

	COMA  shift 30
	PYC  reduce 26

	lista_var2  goto 31


state 26
	declaraciones : tipo $$2 lista_var PYC . $$3 declaraciones  (5)
	$$3 : .  (4)

	.  reduce 4

	$$3  goto 32


state 27
	tipo_arreglo : LCOR NUM . $$8 RCOR tipo_arreglo  (20)
	$$8 : .  (19)

	.  reduce 19

	$$8  goto 33


state 28
	declaraciones : tipo_registro $$4 lista_var PYC . $$5 declaraciones  (8)
	$$5 : .  (7)

	.  reduce 7

	$$5  goto 34


state 29
	tipo_registro : ESTRUCT INICIO $$6 declaraciones END .  (11)

	.  reduce 11


state 30
	lista_var2 : COMA . ID $$10 lista_var2  (25)

	ID  shift 35
	.  error


state 31
	lista_var : ID $$9 lista_var2 .  (23)

	.  reduce 23


state 32
	declaraciones : tipo $$2 lista_var PYC $$3 . declaraciones  (5)
	declaraciones : .  (9)

	ESTRUCT  shift 3
	ENTERO  shift 4
	REAL  shift 5
	DREAL  shift 6
	SIN  shift 7
	CAR  shift 8
	$end  reduce 9
	END  reduce 9

	tipo  goto 9
	base  goto 10
	tipo_registro  goto 11
	declaraciones  goto 36


state 33
	tipo_arreglo : LCOR NUM $$8 . RCOR tipo_arreglo  (20)

	RCOR  shift 37
	.  error


state 34
	declaraciones : tipo_registro $$4 lista_var PYC $$5 . declaraciones  (8)
	declaraciones : .  (9)

	ESTRUCT  shift 3
	ENTERO  shift 4
	REAL  shift 5
	DREAL  shift 6
	SIN  shift 7
	CAR  shift 8
	$end  reduce 9
	END  reduce 9

	tipo  goto 9
	base  goto 10
	tipo_registro  goto 11
	declaraciones  goto 38


state 35
	lista_var2 : COMA ID . $$10 lista_var2  (25)
	$$10 : .  (24)

	.  reduce 24

	$$10  goto 39


state 36
	declaraciones : tipo $$2 lista_var PYC $$3 declaraciones .  (5)

	.  reduce 5


state 37
	tipo_arreglo : LCOR NUM $$8 RCOR . tipo_arreglo  (20)
	tipo_arreglo : .  (21)

	LCOR  shift 21
	ID  reduce 21

	tipo_arreglo  goto 40


state 38
	declaraciones : tipo_registro $$4 lista_var PYC $$5 declaraciones .  (8)

	.  reduce 8


state 39
	lista_var2 : COMA ID $$10 . lista_var2  (25)
	lista_var2 : .  (26)

	COMA  shift 30
	PYC  reduce 26

	lista_var2  goto 41


state 40
	tipo_arreglo : LCOR NUM $$8 RCOR tipo_arreglo .  (20)

	.  reduce 20


state 41
	lista_var2 : COMA ID $$10 lista_var2 .  (25)

	.  reduce 25


54 terminals, 20 nonterminals
28 grammar rules, 42 states
